# lgr-auth

app-service/: Cargo.toml
auth-service/: Cargo.toml
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  mod.rs  password.rs
auth-service/src/routes/: mod.rs  root.rs  signup.rs
auth-service/src/services/: hashmap_user_store.rs
auth-service/tests/api/: helpers.rs  login.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs
