[package]
name = "app-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.6"
axum-extra = { version = "0.12.1", features = ["cookie"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
askama = "0.14.0"
